--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
 spring.datasource.username=postgres
 spring.datasource.password=S19c200ak
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
